Fix layout issue

--- a/landing/css/style.css
+++ b/landing/css/style.css
@@ -36,8 +36,8 @@ body{
 
 
 aside{
-	padding-top: 20px;
-	max-width: 95%;
+	padding: 20px 10px;
+	max-width: 100%;
 }
 
 aside h3{
@@ -106,6 +106,10 @@ aside{
 	}
 	aside{
 		width: 100%;
+	}
+
+	.header-off {
+		text-align: center;
 	}
 
 	.row{
